code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_ts-2.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "post_request!(move_item_endpoint, MoveItemArgs\n        {\n            item_types : get_query_strings(SupportedLanguage::TypeScript),\n            content :\n            r#\"\nclass TsClass {\n    constructor() {}\n\n    /**\n    * bar docs\n    */\n    foo() {}\n/*  ^src */\n\n    bar() {}\n/*  ^dst */\n\n    baz() {}\n}\n\nfunction baz() {}\n    \"#.to_string(),\n            language : SupportedLanguage::TypeScript, src_item :\n            src_item.into(), dst_item : dst_item.into(),\n        }, MoveItemResponse).unwrap()"
---

class TsClass {
    constructor() {}
/*  ^src */

    bar() {}

    /**
    * bar docs
    */
    foo() {}
/*  ^dst */

    baz() {}
}

function baz() {}
    
