code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_ts-4.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---
input:

    /**
    * class docs
    */
    class TsClass {
/*  ^src */
        constructor() {}

        foo() {}

        bar() {}

        baz() {}
    }

    function baz() {}
/*  ^dst */
    
---
output:

    function baz() {}
    ^ Dest

    /**
    ^ Source
    * class docs
    */
    class TsClass {
/*  ^src */
        constructor() {}

        foo() {}

        bar() {}

        baz() {}
    }
/*  ^dst */
    
