code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_ts-5.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "post_request!(move_item_endpoint, MoveItemArgs\n        {\n            item_types : get_query_strings(SupportedLanguage::TypeScript),\n            content :\n            r#\"\n    /**\n    * class docs\n    */\n    class TsClass {\n/*  ^src */\n        constructor() {}\n\n        foo() {}\n\n        bar() {}\n\n        baz() {}\n    }\n\n    class TsClass2 {\n/*  ^dst */\n        constructor() {}\n\n        foo() {}\n    }\n    \"#.to_string(),\n            language : SupportedLanguage::TypeScript, src_item :\n            src_item.into(), dst_item : dst_item.into(),\n        }, MoveItemResponse).unwrap()"
---

    class TsClass2 {
/*  ^dst */
        constructor() {}

        foo() {}
    }

    /**
    * class docs
    */
    class TsClass {
/*  ^src */
        constructor() {}

        foo() {}

        bar() {}

        baz() {}
    }
    
