code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_tsx.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---

    export default function App() {
      return (
          <div>
            
            <button className="card" onClick={() => writeFile(filePath, content)}>
        {/* ^dst */}
              Write file
            </button><button className="card" onClick={readFile}>
        {/* ^src */}
              Choose file
            </button>
          </div>
      );
    }
    

New src start:344
